--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,3 +1,7 @@
-<div>
-<h1>Get it done..</h1>
+<div class="jumbotron col-md-10 col-md-offset-2 ">
+	<h1>N-Abler Dashboard</h1>
+	<p>
+	This area will be updated to have a contextual dashboard, providing quick access
+	to the main areas of interest for the current user.
+	</p>
 </div>
