--- a/public/views/admin/roles.html
+++ b/public/views/admin/roles.html
@@ -6,13 +6,67 @@
 		</p>
 	</div>
 
+
 	<div class="col-md-5 col-md-offset-2">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Available Roles</h3>
+			</div>
+			<div class="panel-body">
+				<table
+					tr-ng-grid=""
+					items="roles"
+					class="table"
+					enable-filtering=false
 
+					page-items="10"
+					selection-mode="SingleRow">
+					<thead>
+						<tr>
+							<th field-name="name" display-name="What" cell-width="100px" display-align="left"></th>
+							<th field-name="description" cell-width="150px" display-align="left"></th>
+						</tr>
+					</thead>
+				</table>
+			</div>
+		</div>
+	</div>
 
-		<table tr-ng-grid="rolesTable" items="roles" class="table" enable-filtering=false fields="['name', 'description']">
-		</table>
-
-
+	<div class="col-md-5">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Role Form</h3>
+			</div>
+			<div class="panel-body">
+				<form class="form-horizontal" name="roleForm" role="form"
+					ng-submit="submitForm(roleForm.$valid)">
+					<div class="form-group">
+						<label for="name" class="col-lg-3 control-label">Name</label>
+						<div class="col-lg-9">
+							<input type="text" class="form-control" id="name" ng-model="name" placeholder="Role Name" required>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="code" class="col-lg-3 control-label">Code</label>
+						<div class="col-lg-9">
+							<input type="text" class="form-control" id="code" ng-model="code"placeholder="Role Code">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="description" class="col-lg-3 control-label">Description</label>
+						<div class="col-lg-9">
+							<input type="text" class="form-control" id="description" ng-model="description" placeholder="Role Description">
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-lg-9 col-lg-offset-7">
+							<button class="btn btn-default">Cancel</button>
+							<button type="submit" class="btn btn-primary" ng-disabled="roleForm.$invalid">Submit</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div> {{ roletemp }}</div>
 
 	</div>
-</div>
