--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,5 +1,5 @@
-<div class="mainbox col-md-6 col-md-offset-3 " >
-    <div class="panel panel-info " >
+<div class="mainbox col-md-6 col-md-offset-3 " style="padding-top: 25px;" >
+    <div class="panel panel-primary " >
         <div class="panel-heading text-center" >
             <div class="panel-title"><i class="fa fa-user fa-5x"></i></div>
 
