--- a/public/views/login.html
+++ b/public/views/login.html
@@ -20,7 +20,7 @@
                     <span class="input-group-addon">
                     <i class="glyphicon glyphicon-user"></i>
                     </span>
-                    <input id="login-email" type="email" class="form-control" name="email" placeholder="username or email" ng-model="login.email" required/>
+                    <input id="login-email" type="text" class="form-control" name="email" placeholder="username or email" ng-model="login.email" required/>
                 </div>
 
                 <div style="margin-bottom: 25px" class="input-group col-sm-8 col-sm-offset-2" ng-class="{'has-error': loginform.password.$invalid }">
