--- a/public/views/admin/roles.html
+++ b/public/views/admin/roles.html
@@ -7,7 +7,7 @@
 	</div>
 
 
-	<div class="col-md-5 col-md-offset-2">
+	<div class="col-md-6 col-md-offset-2">
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="panel-title">Available Roles</h3>
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-5">
+	<div class="col-md-4">
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="panel-title">Role Form</h3>
@@ -59,8 +59,8 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<div class="col-lg-9 col-lg-offset-7">
-							<button class="btn btn-default">Cancel</button>
+						<div class="col-lg-8 col-lg-offset-6">
+							<button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
 							<button type="submit" class="btn btn-primary" ng-disabled="roleForm.$invalid">Submit</button>
 						</div>
 					</div>
