Split the system into multiple files for on-deck.

--- a/public/views/application/ondeck-credit.html
+++ b/public/views/application/ondeck-credit.html
@@ -27,18 +27,21 @@
 				<thead>
 					<tr class="active">
 						<th data-field="select"  style="text-align: center;">Select</th>
-						<th data-field="documentId">Description</th>
+						<th data-field="documentDescription">Description</th>
+						<th data-field="documentId">Filename</th>
 						<th data-field="documentDate">Date</th>
 					</tr>
 				</thead>
 				<tr>
 					<td  style="text-align: center;"><input type="checkbox"></td>
 					<td>January - March</td>
+					<td>Q1Statements.pdf</td>
 					<td>Oct 27, 2014</td>
 				</tr>
 				<tr>
 					<td style="text-align: center;"><input type="checkbox"></td>
 					<td>April - June</td>
+					<td>Q2Statements.pdf</td>
 					<td>Oct 27, 2014</td>
 				</tr>
 			</table>
@@ -85,7 +88,6 @@
 		<p>Do you have a Merchant Cash Advance loan facility, if so:
 		</p>
 	</div>
-
 	<div class="form-group">
 		<label for="mcaBalance"  class="col-sm-2 control-label input-sm" style="text-align: left">Merchant Cash Advance Balance</label>
 		<div class="col-sm-4">
@@ -94,10 +96,9 @@
 				<input type="text" class="form-control input-sm" id="mcaBalance"  placeholder="">
 			</div>
 		</div>
-
 		<!-- <label for="separateBusinessBankAccount"  class="col-sm-2 control-label input-sm" style="text-align: left">Separate Business Account</label>
 		<div class="col-sm-3">
-					<input type="checkbox" class="form-control input-sm" id="separateBusinessBankAccount"  placeholder="">
+							<input type="checkbox" class="form-control input-sm" id="separateBusinessBankAccount"  placeholder="">
 		</div> -->
 	</div>
 	<div class="form-group" style="padding-top: 5px;">
