--- a/public/views/application/ondeck-owner.html
+++ b/public/views/application/ondeck-owner.html
@@ -106,33 +106,34 @@
 
 	</div>
 </div>
-
-<div class="col-sm-12" style="padding-top: 15px;">
-	<table class="table table-bordered table-hover table-condensed">
-		<thead>
-			<tr class="active">
-				<th data-field="select"  style="text-align: center;">Select</th>
-				<th data-field="id">Owner</th>
-				<th data-field="name">Email</th>
-				<th data-field="price">Phone</th>
-				<th data-field="price"  style="text-align: center;">Ownership %</th>
+<div class="form-group">
+	<div class="col-sm-12" style="padding-top: 15px;">
+		<table class="table table-bordered table-hover table-condensed">
+			<thead>
+				<tr class="active">
+					<th data-field="select"  style="text-align: center;">Select</th>
+					<th data-field="id">Owner</th>
+					<th data-field="name">Email</th>
+					<th data-field="price">Phone</th>
+					<th data-field="price"  style="text-align: center;">Ownership %</th>
+				</tr>
+			</thead>
+			<tr>
+				<td  style="text-align: center;"><input type="checkbox"></td>
+				<td>John Smith</td>
+				<td>jsmith@newbuz.com</td>
+				<td>905-510-9822</td>
+				<td  style="text-align: center;">75%</td>
 			</tr>
-		</thead>
-		<tr>
-			<td  style="text-align: center;"><input type="checkbox"></td>
-			<td>John Smith</td>
-			<td>jsmith@newbuz.com</td>
-			<td>905-510-9822</td>
-			<td  style="text-align: center;">75%</td>
-		</tr>
-		<tr>
-			<td  style="text-align: center;"><input type="checkbox"></td>
-			<td>Bob Scott</td>
-			<td>bscott@newbuz.com</td>
-			<td>905-510-9823</td>
-			<td  style="text-align: center;">25%</td>
-		</tr>
-	</table>
+			<tr>
+				<td  style="text-align: center;"><input type="checkbox"></td>
+				<td>Bob Scott</td>
+				<td>bscott@newbuz.com</td>
+				<td>905-510-9823</td>
+				<td  style="text-align: center;">25%</td>
+			</tr>
+		</table>
+	</div>
 	<div class="col-sm-12 col-sm-offset-4"  >
 		<button type="button" class="btn btn-default btn-sm" popover="Click here to add a new owner to the application" popover-trigger="mouseenter">Add Owner</button>
 		<button type="button" class="btn btn-default btn-sm" popover="Click here to edit the selected owner" popover-trigger="mouseenter">Edit Owner</button>
