--- a/public/views/test/tester.html
+++ b/public/views/test/tester.html
@@ -1,6 +1,11 @@
 <!-- Just a test html -->
-<tabset>
-	<tab heading="Business">Business</tab>
-	<tab heading="Business">Owner</tab>
-	<tab heading="Business">Reporting</tab>
+<div>
+	<div class="col-sm-10 col-sm-offset-2">
+
+		<tabset>
+		<tab heading="Business"></tab>
+	<tab heading="Owner"></tab>
+<tab heading="Reporting"></tab>
 </tabset>
+</div>
+</div>
