--- a/public/views/application/ondeck-main.html
+++ b/public/views/application/ondeck-main.html
@@ -1,39 +1,48 @@
 <div>
-
 	<div class="col-sm-10 col-sm-offset-2">
-		<div class="panel panel-default">
+		<!-- <div class="panel panel-default">
 			<div class="panel-heading">
 				<p class="panel-title"><i class='fa fa-file-text-o fa-fw'></i> Small Business Loan Application</p>
 			</div>
 			<div class="panel-body" style="height:775px;">
-
+ -->
 
 				<form class="form-horizontal" name="roleForm" role="form">
 					<tabset>
 
-						<tab>
+						<tab popover="Enter the details pertaining to the buisness." popover-trigger="mouseenter">
 							<tab-heading>
 								<i class='fa fa-fax fa-fw'></i> Business Details
 							</tab-heading>
 							<div ng-include src="'views/application/ondeck-business.html'"></div>
+						</tab>	
+
+						<tab popover="Enter the details pertaining to the associated Credit Union." popover-trigger="mouseenter">
+							<tab-heading>
+								<i class='fa fa-bank fa-fw'></i> Credit Union Details
+							</tab-heading>
+							<div ng-include src="'views/application/ondeck-creditunion.html'"></div>
 						</tab>
-						<tab>
+						<tab popover="Enter the details pertaining to the owners of the business." popover-trigger="mouseenter">
 							<tab-heading>
 								<i class='fa fa-user fa-fw'></i> Owner Details
 							</tab-heading>
 							<div ng-include src="'views/application/ondeck-owner.html'"></div>
 						</tab>
-						<tab>
+						<tab popover="Enter the credit details of the business." popover-trigger="mouseenter">
 							<tab-heading>
 								<i class='fa fa-usd fa-fw'></i> Business Credit Details
 							</tab-heading>
 							<div ng-include src="'views/application/ondeck-credit.html'"></div>
 						</tab>
+						<tab popover="Final review and submission to OnDeck." popover-trigger="mouseenter">
+							<tab-heading>
+								<i class='fa fa-download fa-fw'></i> Submit
+							</tab-heading>
+							<div ng-include src="'views/application/ondeck-submit.html'"></div>
+						</tab>
 
-
-						<!-- 					<div ng-include src="'views/application/ondeck-owner.html'"></div>
-						<div ng-include src="'views/application/ondeck-credit.html'"></div>
-						-->
+					
 
 					</tabset>
 					<!-- ############################################################### -->
@@ -42,12 +51,12 @@
 					<!-- Form Buttons -->
 				</form>
 			</div>
-			<div class="panel-footer" style="height: 55px;">
+		<!-- 	<div class="panel-footer" style="height: 55px;">
 				<div class="col-sm-12 col-sm-offset-10">
 					<button class="btn btn-default">Cancel</button>
-					<button type="submit" class="btn btn-primary" ng-disabled="roleForm.$invalid">Submit</button>
+					<button type="button" class="btn btn-primary" ng-click="nextTab()">Next</button>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
