--- a/public/views/test/tester.html
+++ b/public/views/test/tester.html
@@ -1,11 +1,53 @@
 <!-- Just a test html -->
 <div>
-	<div class="col-sm-10 col-sm-offset-2">
+	<div class="col-sm-2 col-sm-offset-2">
+		<nav>
+			<ul class="nav">
+				<li>
+					<a>
+						<span class="pull-right">
+						<i class="fa fa-fw fa-angle-right text"></i>
+						<i class="fa fa-fw fa-angle-down text-active"></i>
+						</span>
+						<i class="glyphicon glyphicon-stats icon"></i>
+						<span class="font-bold ng-scope">Home</span>
+					</a>
+				</li>
+				<li>
+					<a>
+						<span class="pull-right">
+						<i class="fa fa-fw fa-angle-right text"></i>
+						<i class="fa fa-fw fa-angle-down text-active"></i>
+						</span>
+						<i class="glyphicon glyphicon-stats icon"></i>
+						<span class="font-bold ng-scope" >Application</span>
+					</a>
+					<ul class="nav nav-sub">
+						<li>
+							<a>
+								<span class="pull-right">
+								<i class="fa fa-fw fa-angle-right text"></i>
+								<i class="fa fa-fw fa-angle-down text-active"></i>
+								</span>
+								<i class="glyphicon glyphicon-stats icon"></i>
+								<span class="font-bold ng-scope" >Application</span>
+							</a>
 
-		<tabset>
-		<tab heading="Business"></tab>
-	<tab heading="Owner"></tab>
-<tab heading="Reporting"></tab>
-</tabset>
-</div>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a>
+						<span class="pull-right">
+						<i class="fa fa-fw fa-angle-right text"></i>
+						<i class="fa fa-fw fa-angle-down text-active"></i>
+						</span>
+						<i class="glyphicon glyphicon-stats icon"></i>
+						<span class="font-bold ng-scope" >Administration</span>
+					</a>
+				</li>
+			</ul>
+
+		</nav>
+	</div>
 </div>
