--- a/public/views/application/v2/ondeck-main.html
+++ b/public/views/application/v2/ondeck-main.html
@@ -17,12 +17,12 @@
 							<div ng-include src="'views/application/v2/ondeck-business.html'"></div>
 						</tab>	
 
-						<tab popover="Enter the details pertaining to the associated Credit Union." popover-trigger="mouseenter">
+<!-- 						<tab popover="Enter the details pertaining to the associated Credit Union." popover-trigger="mouseenter">
 							<tab-heading>
 								<i class='fa fa-bank fa-fw'></i> Banking Details (v2)
 							</tab-heading>
 							<div ng-include src="'views/application/v2/ondeck-creditunion.html'"></div>
-						</tab>
+						</tab> -->
 						<tab popover="Enter the details pertaining to the owners of the business." popover-trigger="mouseenter">
 							<tab-heading>
 								<i class='fa fa-user fa-fw'></i> Owner Details (v2)
