--- a/public/views/application/v2/ondeck-owner.html
+++ b/public/views/application/v2/ondeck-owner.html
@@ -13,8 +13,11 @@
 			<legend>Owner Details</legend>
 			<div class="form-group">
 				<label for="onwerName"  class="col-sm-4 control-label input-sm" style="text-align: left">Name</label>
-				<div class="col-sm-8">
-					<input type="text" class="form-control input-sm" id="ownerName"  placeholder="Name of Owner">
+				<div class="col-sm-4">
+					<input type="text" class="form-control input-sm" id="ownerFirstName"  placeholder="First Name">
+				</div>
+				<div class="col-sm-4">
+					<input type="text" class="form-control input-sm" id="ownerLastName"  placeholder="Last Name">
 				</div>
 			</div>
 
