--- a/public/css/nabler.css
+++ b/public/css/nabler.css
@@ -33,6 +33,7 @@ body {
 .sidebar {
   display: none;
 }
+
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -43,7 +44,16 @@ body {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto; 
+
+/*
+  background-image: url('/images/NBLogo.JPG') !important;
+  background-size: 45px 45px;
+  background-repeat: no-repeat;
+  background-position-y: 3px;*/
+
+
+    /* Scrollable contents if viewport is shorter than content. */
     /*background-color: #f5f5f5;*/
     /*border-right: 1px solid #eee;*/
   }
@@ -54,6 +64,7 @@ body {
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
+
 }
 .nav-sidebar > li > a {
   padding-right: 20px;
