--- a/public/views/application/v2/ondeck-credit.html
+++ b/public/views/application/v2/ondeck-credit.html
@@ -21,27 +21,31 @@
 					</div>
 				</div>
 			</div>
-			<div class="alert alert-warning col-sm-12" role="alert" style="padding: 5px;">
-				<p>Do you currently rent your office/business premises, if so:
-				</p>
-			</div>
-			<div class="form-group" style="">
-				<label for="landlordPhone" class="col-sm-4 control-label input-sm" style="text-align: left">Landloard Telephone #</label>
-				<div class="col-sm-8">
-					<input type="tel" class="form-control input-sm" id="landlordPhone"  placeholder="Phone number">
-				</div>
-			</div>
+
+			<!-- ############################################################### -->
+			<!-- Credit Union Name & Address -->
+			<!-- ############################################################### -->
 			<div class="form-group">
-				<label for="landlordName" class="col-sm-4 control-label input-sm" style="text-align: left">Landlord Name</label>
+				<label for="creditUnionName" class="col-sm-4 control-label input-sm" style="text-align: left">Credit Union/Bank</label>
 				<div class="col-sm-8">
-					<input type="text" class="form-control input-sm" id="landlordName"  placeholder="Contact Name">
+					<input type="text" class="form-control input-sm" id="creditUnionName"  placeholder="Name of the credit union or bank">
 				</div>
 			</div>
+
+			<div class="form-group" >
+				<label for="creditUnionBranch" class="col-sm-4 control-label input-sm" style="text-align: left">Branch</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control input-sm" id="creditUnionName"  placeholder="Branch name">
+				</div>
+			</div>
+
+
+			
 		</fieldset>
 	</div>
 
 
-	<div class="col-sm-6" style="height:280px; ">
+	<div class="col-sm-6" style="">
 		<fieldset>
 			<legend>Credit Card</legend>
 
@@ -135,6 +139,22 @@
 						<div class="input-group-addon input-sm">$</div>
 						<input type="text" class="form-control input-sm" id="mcaBalance"  placeholder="">
 					</div>
+				</div>
+			</div>
+			<div class="alert alert-warning col-sm-12" role="alert" style="padding: 5px;">
+				<p>Do you currently rent your office/business premises, if so:
+				</p>
+			</div>
+			<div class="form-group" style="">
+				<label for="landlordPhone" class="col-sm-4 control-label input-sm" style="text-align: left">Landloard Telephone #</label>
+				<div class="col-sm-8">
+					<input type="tel" class="form-control input-sm" id="landlordPhone"  placeholder="Phone number">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="landlordName" class="col-sm-4 control-label input-sm" style="text-align: left">Landlord Name</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control input-sm" id="landlordName"  placeholder="Contact Name">
 				</div>
 			</div>
 		</fieldset>
